remove unnecessary catch statement